Kenneth is awesome

--- a/ahp.html
+++ b/ahp.html
@@ -1,3 +1,5 @@
+The Quick Brown Fox Jumps Over The Lazy Dog
+
 <form>
     Price <input type="radio" value="1" name="crit[0]" checked> vs. Floor Area <input type="radio" value="2" name="crit[0]"><br/>
 
