Follow up from previous commit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <script src="js/heatcanvas.js"></script>
         <script src="js/heatcanvas-leaflet.js"></script>
         <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDbtDPnT0d7d8mKYnkua06UZzDgksNIo8A&sensor=true'></script>
+        <script type="text/javascript" src="js/webgl-heatmap.js"></script>
+        <script type="text/javascript" src="js/webgl-heatmap-leaflet.js"></script>
+        <script type="text/javascript" src="js/shCore.js"></script>
+        <script type="text/javascript" src="js/shBrushJScript.js"></script>
         <script src="js/underscore.js"></script>
         <script src="js/numeral.js"></script>
         
