--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--leaflet stylesheet-->
     <link rel="stylesheet" href="css/leaflet.css" />
-    <link rel="stylesheet" href="../css/leafletcontrol/L.Control.Pan.css">
+    <link rel="stylesheet" href="css/leafletcontrol/L.Control.Pan.css">
     <link rel="stylesheet" href="css/MarkerCluster.css" />
     <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="css/reveal.css" />
