AHP for one person complete.
To Do: 
1) Signal which marker is selected when AHP run is done. For now bounce is working, but need to sustain the bounce. Or maye change icon colour to show which marker is selected?
2) Get the form out of the way when runAHP so that user can see which location is selected
3) 2 player for AHP.

--- a/ahp.html
+++ b/ahp.html
@@ -1,54 +1,54 @@
 <form>
     Price <input type="radio" value="1" name="crit[0]" checked> vs. Floor Area <input type="radio" value="2" name="crit[0]"><br/>
 
-    1 <input type="radio" name="intensity[0]" value="1"> 
+    1 <input type="radio" name="intensity[0]" value="1" checked> 
     2 <input type="radio" name="intensity[0]" value="2"> 
     3 <input type="radio" name="intensity[0]" value="3"> 
     4 <input type="radio" name="intensity[0]" value="4"> 
-    5 <input type="radio" name="intensity[0]" value="5" checked> 
+    5 <input type="radio" name="intensity[0]" value="5"> 
     <br/><br/>
 
-    Price <input type="radio" value="1" name="crit[1]" checked> vs Nearest MRT <input type="radio" value="2" name="crit[1]"><br/>
+    Price <input type="radio" value="1" name="crit[1]" checked> vs Distance to MRT <input type="radio" value="2" name="crit[1]"><br/>
 
-    1 <input type="radio" name="intensity[1]" value="1"> 
+    1 <input type="radio" name="intensity[1]" value="1" checked> 
     2 <input type="radio" name="intensity[1]" value="2"> 
     3 <input type="radio" name="intensity[1]" value="3"> 
     4 <input type="radio" name="intensity[1]" value="4"> 
-    5 <input type="radio" name="intensity[1]" value="5" checked> 
+    5 <input type="radio" name="intensity[1]" value="5"> 
     <br/><br/>
 
-    Price <input type="radio" value="1" name="crit[2]" checked> vs Nearest Primary School <input type="radio" value="2" name="crit[2]"><br/>
+    Price <input type="radio" value="1" name="crit[2]" checked> vs Distance to School <input type="radio" value="2" name="crit[2]"><br/>
 
-    1 <input type="radio" name="intensity[2]" value="1"> 
+    1 <input type="radio" name="intensity[2]" value="1" checked> 
     2 <input type="radio" name="intensity[2]" value="2"> 
     3 <input type="radio" name="intensity[2]" value="3"> 
     4 <input type="radio" name="intensity[2]" value="4"> 
-    5 <input type="radio" name="intensity[2]" value="5" checked> 
+    5 <input type="radio" name="intensity[2]" value="5"> 
     <br/><br/>
 
-    Floor Area <input type="radio" value="1" name="crit[3]" checked> vs Nearest MRT <input type="radio" value="2" name="crit[3]"><br/>
+    Floor Area <input type="radio" value="1" name="crit[3]" checked> vs Distance to MRT <input type="radio" value="2" name="crit[3]"><br/>
 
-    1 <input type="radio" name="intensity[3]" value="1"> 
+    1 <input type="radio" name="intensity[3]" value="1" checked> 
     2 <input type="radio" name="intensity[3]" value="2"> 
     3 <input type="radio" name="intensity[3]" value="3"> 
-    4 <input type="radio" name="intensity[3]" value="4" checked> 
+    4 <input type="radio" name="intensity[3]" value="4"> 
     5 <input type="radio" name="intensity[3]" value="5"> 
     <br/><br/>
 
-    Floor Area <input type="radio" value="1" name="crit[4]" checked> vs Nearest Primary School <input type="radio" value="2" name="crit[4]"><br/>
+    Floor Area <input type="radio" value="1" name="crit[4]" checked> vs Distance to School <input type="radio" value="2" name="crit[4]"><br/>
 
-    1 <input type="radio" name="intensity[4]" value="1"> 
+    1 <input type="radio" name="intensity[4]" value="1" checked> 
     2 <input type="radio" name="intensity[4]" value="2"> 
     3 <input type="radio" name="intensity[4]" value="3"> 
-    4 <input type="radio" name="intensity[4]" value="4" checked> 
+    4 <input type="radio" name="intensity[4]" value="4"> 
     5 <input type="radio" name="intensity[4]" value="5"> 
     <br/><br/>
 
-    Nearest MRT <input type="radio" value="1" name="crit[5]" checked> vs Nearest Primary School <input type="radio" value="2" name="crit[5]"><br/>
+    Distance to MRT <input type="radio" value="1" name="crit[5]" checked> vs Distance to School <input type="radio" value="2" name="crit[5]"><br/>
 
-    1 <input type="radio" name="intensity[5]" value="1"> 
+    1 <input type="radio" name="intensity[5]" value="1" checked> 
     2 <input type="radio" name="intensity[5]" value="2"> 
-    3 <input type="radio" name="intensity[5]" value="3" checked> 
+    3 <input type="radio" name="intensity[5]" value="3"> 
     4 <input type="radio" name="intensity[5]" value="4"> 
     5 <input type="radio" name="intensity[5]" value="5"> 
     <br/><br/>
