--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/MarkerCluster.css" />
         <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
         <link rel="stylesheet" href="css/reveal.css" />
+        <link rel="stylesheet" href="css/avgrund.css"/>
         <!--[if lte IE8]>
             <link rel="stylesheet" href=css/leaflet.ie.css"/>
             <![endif]-->
@@ -38,6 +39,8 @@
         <!--link to main javascript file-->
         <script src="js/utility.js"></script>
         <script src="js/ahp.js"></script>
+        <script type="text/javascript" src="js/avgrund.js"></script>
+        <script type="text/javascript" src="js/jquery.avgrund.js"></script> 
         <script src="js/usermarker.js"></script>
         <script src="js/main.js"></script>
         <script>
@@ -51,7 +54,7 @@
         </div>
         <div id="map" class="leaflet-fade-anim" />
 
-        <div id="myModal" class="reveal-modal">
+        <!-- <div id="myModal" class="reveal-modal">
             <form>
                 Price <input type="radio" value="1" name="crit[0]" checked> vs. Floor Area <input type="radio" value="2" name="crit[0]"><br/>
 
@@ -113,7 +116,132 @@
             <div id="output">
                 <a class="close-reveal-modal">&#215;</a>
             </div>
+        </div> -->
+        <div id="myModal" class="reveal-modal">
+    <div id="single-player-mode">
+        <form class="flatform">
+        <p>
+            <input type="radio" id="crit[0]-1" name="crit[0]" value="1" autocomplete="off" checked="checked" hidden>
+                <label for="crit[0]-1" class="switch switch --on">Price</label>
+            <input type="radio" id="crit[0]-2" name="crit[0]" value="2" autocomplete="off" hidden>
+                <label for="crit[0]-2" class="switch switch --off">Floor Area</label>
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[0]" id="intensity[0]-1" value="1" checked="checked">
+                    <label for="intensity[0]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[0]" id="intensity[0]-2" value="2">
+                    <label for="intensity[0]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[0]" id="intensity[0]-3" value="3">
+                    <label for="intensity[0]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[0]" id="intensity[0]-4" value="4">
+                    <label for="intensity[0]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[0]" id="intensity[0]-5" value="5">
+                    <label for="intensity[0]-5" class="switch switch --on">5</label>
+            </p>
+        </p><hr noshade/>
+        <p>
+            <input type="radio" value="1" name="crit[1]" id="crit[1]-1" hidden autocomplete="off" checked="checked">
+                <label for="crit[1]-1" class="switch switch --on">Price</label>
+            <input type="radio" value="2" name="crit[1]" id="crit[1]-2" autocomplete="off" hidden>
+                <label for="crit[1]-2" class="switch switch --off">Distance to MRT</label>
+
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-1" value="1">
+                    <label for="intensity[1]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-2" value="2" checked="checked">
+                    <label for="intensity[1]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-3" value="3">
+                    <label for="intensity[1]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-4" value="4">
+                    <label for="intensity[1]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-5" value="5">
+                    <label for="intensity[1]-5" class="switch switch --on">5</label>
+            </p>
+        </p><hr noshade/>
+        <p>
+            <input type="radio" value="1" name="crit[2]" id="crit[2]-1" hidden autocomplete="off" checked="checked">
+                    <label for="crit[2]-1" class="switch switch --on">Price</label>
+            <input type="radio" value="2" name="crit[2]" id="crit[2]-2" autocomplete="off" hidden>
+                <label for="crit[2]-2" class="switch switch --off">Distance to School</label>
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[3]" id="intensity[3]-1" value="1" checked="checked">
+                    <label for="intensity[3]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[3]" id="intensity[3]-2" value="2">
+                    <label for="intensity[3]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[3]" id="intensity[3]-3" value="3">
+                    <label for="intensity[3]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[3]" id="intensity[3]-4" value="4">
+                    <label for="intensity[3]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[3]" id="intensity[3]-5" value="5">
+                    <label for="intensity[3]-5" class="switch switch --on">5</label>
+            </p>
+        </p><hr noshade/>
+        <p>
+            <input type="radio" value="1" name="crit[3]" id="crit[3]-1" hidden autocomplete="off" checked="checked">
+                    <label for="crit[3]-1" class="switch switch --on">Floor Area</label>
+            <input type="radio" value="2" name="crit[3]" id="crit[3]-2" autocomplete="off" hidden>
+                <label for="crit[3]-2" class="switch switch --off">Distance to MRT</label>
+
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[4]" id="intensity[4]-1" value="1" checked="checked">
+                    <label for="intensity[4]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[4]" id="intensity[4]-2" value="2">
+                    <label for="intensity[4]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[4]" id="intensity[4]-3" value="3">
+                    <label for="intensity[4]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[4]" id="intensity[4]-4" value="4">
+                    <label for="intensity[4]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[4]" id="intensity[4]-5" value="5">
+                    <label for="intensity[4]-5" class="switch switch --on">5</label>
+            </p>
+        </p><hr noshade/>
+        <p>
+            <input type="radio" value="1" name="crit[4]" id="crit[4]-1" hidden autocomplete="off" checked="checked">
+                    <label for="crit[4]-1" class="switch switch --on">Floor Area</label>
+            <input type="radio" value="2" name="crit[4]" id="crit[4]-2" autocomplete="off" hidden>
+                <label for="crit[4]-2" class="switch switch --off">Distance to School</label>
+
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[5]" id="intensity[5]-1" value="1" checked="checked">
+                    <label for="intensity[5]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[5]" id="intensity[5]-2" value="2">
+                    <label for="intensity[5]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[5]" id="intensity[5]-3" value="3">
+                    <label for="intensity[5]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[5]" id="intensity[5]-4" value="4">
+                    <label for="intensity[5]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[5]" id="intensity[5]-5" value="5">
+                    <label for="intensity[5]-5" class="switch switch --on">5</label>
+            </p>
+        </p><hr noshade/>
+        <p>
+            <input type="radio" value="1" name="crit[5]" id="crit[5]-1" hidden autocomplete="off" checked="checked">
+                    <label for="crit[5]-1" class="switch switch --on">Distance to MRT</label>
+            <input type="radio" value="2" name="crit[5]" id="crit[5]-2" autocomplete="off" hidden>
+                <label for="crit[5]-2" class="switch switch --off">Distance to School</label>
+
+            <p>
+                <input type="radio" hidden autocomplete="off" name="intensity[6]" id="intensity[6]-1" value="1" checked="checked">
+                    <label for="intensity[6]-1" class="switch switch --on">1</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[6]" id="intensity[6]-2" value="2">
+                    <label for="intensity[6]-2" class="switch switch --on">2</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[6]" id="intensity[6]-3" value="3">
+                    <label for="intensity[6]-3" class="switch switch --on">3</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[6]" id="intensity[6]-4" value="4">
+                    <label for="intensity[6]-4" class="switch switch --on">4</label>
+                <input type="radio" hidden autocomplete="off" name="intensity[6]" id="intensity[6]-5" value="5">
+                    <label for="intensity[6]-5" class="switch switch --on">5</label>
+            </p>
+        </p>
+
+
+        <button type="button" onclick="runAHP();">Run AHP</button>
+        </form>
+
+        <div id="output">
+            <a class="close-reveal-modal">&#215;</a>
         </div>
+    </div>
+</div>
     </body>
 
 </html>
