Added sticky library and modified the units in form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="css/reveal.css" />
     <link rel="stylesheet" href="css/avgrund.css" />
+    <link rel="stylesheet" href="css/sticky.full.css" />
     <!--[if lte IE8]>
             <link rel="stylesheet" href=css/leaflet.ie.css"/>
             <![endif]-->
@@ -26,6 +27,7 @@
     <script src="js/TileLayer.Grayscale.js"></script>
     <script src="js/heatcanvas.js"></script>
     <script src="js/heatcanvas-leaflet.js"></script>
+    <script src="js/sticky.full.js"></script>
     <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDbtDPnT0d7d8mKYnkua06UZzDgksNIo8A&sensor=true'></script>
     <script type="text/javascript" src="js/jquery.reveal.js"></script>
     <script type="text/javascript" src="js/webgl-heatmap.js"></script>
