--- a/index.html
+++ b/index.html
@@ -192,15 +192,9 @@
 
                 <button type="button" onclick="runAHP(1);">Run AHP</button>
             </form>
-
-            <div id="output">
-                <a class="close-reveal-modal">&#215;</a>
-            </div>
         </div>
 
-        <!-- STUCK HERE MUCH-->
         <div id="two-player-mode" class="fadeeffect" style="display:none;">
-
             <table>
                 <form class="flatform">
                     <thead>
@@ -213,17 +207,11 @@
                     </thead>
                     <tr>
                         <td>
-                            <!-- Price <input type="radio" value="1" name="crit[0]" checked> vs. Floor Area <input type="radio" value="2" name="crit[0]"><br/> -->
                             <input type="radio" id="multi-crit-1player[0]-1" name="multi-crit-1player[0]" value="1" autocomplete="off" checked="checked" hidden>
                             <label for="multi-crit-1player[0]-1" class="switch switch --on">Price</label>
                             <input type="radio" id="multi-crit-1player[0]-2" name="multi-crit-1player[0]" value="2" autocomplete="off" hidden>
                             <label for="multi-crit-1player[0]-2" class="switch switch --off">Floor Area</label>
 
-                            <!-- 1 <input type="radio" name="intensity[0]" value="1"> 
-        2 <input type="radio" name="intensity[0]" value="2"> 
-        3 <input type="radio" name="intensity[0]" value="3"> 
-        4 <input type="radio" name="intensity[0]" value="4"> 
-        5 <input type="radio" name="intensity[0]" value="5" checked>  -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-1" value="1">
                                 <label for="multi-intensity-1player[0]-1" class="switch switch --on">1</label>
@@ -238,19 +226,12 @@
                             </p>
                         </td>
                         <td>
-                            <!-- Price
-                <input type="radio" value="1" name="crit2[0]" checked>vs. Floor Area
-                <input type="radio" value="2" name="crit2[0]"> -->
+
                             <input type="radio" id="multi-crit-2player[0]-1" name="multi-crit-2player[0]" value="1" autocomplete="off" checked="checked" hidden>
                             <label for="multi-crit-2player[0]-1" class="switch switch --on">Price</label>
                             <input type="radio" id="multi-crit-2player[0]-2" name="multi-crit-2player[0]" value="2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[0]-2" class="switch switch --off">Floor Area</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[0]" value="1">2
-                <input type="radio" name="intensity2[0]" value="2">3
-                <input type="radio" name="intensity2[0]" value="3">4
-                <input type="radio" name="intensity2[0]" value="4">5
-                <input type="radio" name="intensity2[0]" value="5" checked> -->
+
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-1" value="1">
                                 <label for="multi-intensity-2player[0]-1" class="switch switch --on">1</label>
@@ -267,16 +248,6 @@
                     </tr>
                     <tr>
                         <td>
-                            <!-- Price
-                <input type="radio" value="1" name="crit[1]" checked>vs Distance to MRT
-                <input type="radio" value="2" name="crit[1]">
-                <br/>1
-                <input type="radio" name="intensity[1]" value="1">2
-                <input type="radio" name="intensity[1]" value="2">3
-                <input type="radio" name="intensity[1]" value="3">4
-                <input type="radio" name="intensity[1]" value="4">5
-                <input type="radio" name="intensity[1]" value="5" checked> -->
-
                             <input type="radio" value="1" name="multi-crit-1player[1]" id="multi-crit-1player[1]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-1player[1]-1" class="switch switch --on">Price</label>
                             <input type="radio" value="2" name="multi-crit-1player[1]" id="multi-crit-1player[1]-2" autocomplete="off" hidden>
@@ -297,19 +268,11 @@
 
                         </td>
                         <td>
-                            <!-- Price
-                <input type="radio" value="1" name="crit2[1]" checked>vs Distance to MRT
-                <input type="radio" value="2" name="crit2[1]"> -->
                             <input type="radio" value="1" name="multi-crit-2player[1]" id="multi-crit-2player[1]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-2player[1]-1" class="switch switch --on">Price</label>
                             <input type="radio" value="2" name="multi-crit-2player[1]" id="multi-crit-2player[1]-2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[1]-2" class="switch switch --off">Distance to MRT</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[1]" value="1">2
-                <input type="radio" name="intensity2[1]" value="2">3
-                <input type="radio" name="intensity2[1]" value="3">4
-                <input type="radio" name="intensity2[1]" value="4">5
-                <input type="radio" name="intensity2[1]" value="5" checked> -->
+
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-1" value="1">
                                 <label for="multi-intensity-2player[1]-1" class="switch switch --on">1</label>
@@ -326,9 +289,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <!-- Price
-                <input type="radio" value="1" name="crit[2]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit[2]"> -->
+
                             <input type="radio" value="1" name="multi-crit-1player[2]" id="multi-crit-1player[2]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-1player[2]-1" class="switch switch --on">Price</label>
                             <input type="radio" value="2" name="multi-crit-1player[2]" id="multi-crit-1player[2]-2" autocomplete="off" hidden>
@@ -346,17 +307,10 @@
                                 <label for="multi-intensity-1player[2]-5" class="switch switch --on">5</label>
                             </p>
 
-                            <!--  <br/>1
-                <input type="radio" name="intensity[2]" value="1">2
-                <input type="radio" name="intensity[2]" value="2">3
-                <input type="radio" name="intensity[2]" value="3">4
-                <input type="radio" name="intensity[2]" value="4">5
-                <input type="radio" name="intensity[2]" value="5" checked> -->
+
                         </td>
                         <td>
-                            <!-- Price
-                <input type="radio" value="1" name="crit2[2]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit2[2]"> -->
+
                             <input type="radio" value="1" name="multi-crit-2player[2]" id="multi-crit-2player[2]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-2player[2]-1" class="switch switch --on">Price</label>
                             <input type="radio" value="2" name="multi-crit-2player[2]" id="multi-crit-2player[2]-2" autocomplete="off" hidden>
@@ -373,31 +327,18 @@
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[2]" id="multi-intensity-2player[2]-5" value="5">
                                 <label for="multi-intensity-2player[2]-5" class="switch switch --on">5</label>
                             </p>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[2]" value="1">2
-                <input type="radio" name="intensity2[2]" value="2">3
-                <input type="radio" name="intensity2[2]" value="3">4
-                <input type="radio" name="intensity2[2]" value="4">5
-                <input type="radio" name="intensity2[2]" value="5" checked> -->
+
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <!-- Floor Area
-                <input type="radio" value="1" name="crit[3]" checked>vs Distance to MRT -->
+
 
                             <input type="radio" value="1" name="multi-crit-1player[3]" id="multi-crit-1player[3]-1" hidden autocomplete="off">
                             <label for="multi-crit-1player[3]-1" class="switch switch --on">Floor Area</label>
                             <input type="radio" value="2" name="multi-crit-1player[3]" id="multi-crit-1player[3]-2" autocomplete="off" hidden checked="checked">
                             <label for="multi-crit-1player[3]-2" class="switch switch --off">Distance to MRT</label>
 
-                            <!-- <input type="radio" value="2" name="crit[3]">
-                <br/>1
-                <input type="radio" name="intensity[3]" value="1">2
-                <input type="radio" name="intensity[3]" value="2">3
-                <input type="radio" name="intensity[3]" value="3">4
-                <input type="radio" name="intensity[3]" value="4" checked>5
-                <input type="radio" name="intensity[3]" value="5"> -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-1" value="1">
                                 <label for="multi-intensity-1player[3]-1" class="switch switch --on">1</label>
@@ -413,19 +354,11 @@
 
                         </td>
                         <td>
-                            <!-- Floor Area
-                <input type="radio" value="1" name="crit2[3]" checked>vs Distance to MRT
-                <input type="radio" value="2" name="crit2[3]"> -->
+
                             <input type="radio" value="1" name="multi-crit-2player[3]" id="multi-crit-2player[3]-1" hidden autocomplete="off">
                             <label for="multi-crit-2player[3]-1" class="switch switch --on">Floor Area</label>
                             <input type="radio" value="2" name="multi-crit-2player[3]" id="multi-crit-2player[3]-2" autocomplete="off" hidden checked="checked">
                             <label for="multi-crit-2player[3]-2" class="switch switch --off">Distance to MRT</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[3]" value="1">2
-                <input type="radio" name="intensity2[3]" value="2">3
-                <input type="radio" name="intensity2[3]" value="3">4
-                <input type="radio" name="intensity2[3]" value="4" checked>5
-                <input type="radio" name="intensity2[3]" value="5"> -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-1" value="1">
                                 <label for="multi-intensity-2player[3]-1" class="switch switch --on">1</label>
@@ -442,19 +375,12 @@
                     </tr>
                     <tr>
                         <td>
-                            <!-- Floor Area
-                <input type="radio" value="1" name="crit[4]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit[4]"> -->
+
                             <input type="radio" value="1" name="multi-crit-1player[4]" id="multi-crit-1player[4]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-1player[4]-1" class="switch switch --on">Floor Area</label>
                             <input type="radio" value="2" name="multi-crit-1player[4]" id="multi-crit-1player[4]-2" autocomplete="off" hidden>
                             <label for="multi-crit-1player[4]-2" class="switch switch --off">Distance to School</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity[4]" value="1">2
-                <input type="radio" name="intensity[4]" value="2">3
-                <input type="radio" name="intensity[4]" value="3">4
-                <input type="radio" name="intensity[4]" value="4" checked>5
-                <input type="radio" name="intensity[4]" value="5"> -->
+
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[4]" id="multi-intensity-1player[4]-1" value="1" checked="checked">
                                 <label for="multi-intensity-1player[4]-1" class="switch switch --on">1</label>
@@ -469,19 +395,11 @@
                             </p>
                         </td>
                         <td>
-                            <!-- Floor Area
-                <input type="radio" value="1" name="crit2[4]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit2[4]"> -->
+
                             <input type="radio" value="1" name="multi-crit-2player[4]" id="multi-crit-2player[4]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-2player[4]-1" class="switch switch --on">Floor Area</label>
                             <input type="radio" value="2" name="multi-crit-2player[4]" id="multi-crit-2player[4]-2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[4]-2" class="switch switch --off">Distance to School</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[4]" value="1">2
-                <input type="radio" name="intensity2[4]" value="2">3
-                <input type="radio" name="intensity2[4]" value="3">4
-                <input type="radio" name="intensity2[4]" value="4" checked>5
-                <input type="radio" name="intensity2[4]" value="5"> -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[4]" id="multi-intensity-2player[4]-1" value="1" checked="checked">
                                 <label for="multi-intensity-2player[4]-1" class="switch switch --on">1</label>
@@ -498,21 +416,12 @@
                     </tr>
                     <tr>
                         <td>
-                            <!-- Distance to MRT
-                <input type="radio" value="1" name="crit[5]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit[5]"> -->
 
                             <input type="radio" value="1" name="multi-crit-1player[5]" id="multi-crit-1player[5]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-1player[5]-1" class="switch switch --on">Distance to MRT</label>
                             <input type="radio" value="2" name="multi-crit-1player[5]" id="multi-crit-1player[5]-2" autocomplete="off" hidden>
                             <label for="multi-crit-1player[5]-2" class="switch switch --off">Distance to School</label>
 
-                            <!-- <br/>1
-                <input type="radio" name="intensity[5]" value="1">2
-                <input type="radio" name="intensity[5]" value="2">3
-                <input type="radio" name="intensity[5]" value="3" checked>4
-                <input type="radio" name="intensity[5]" value="4">5
-                <input type="radio" name="intensity[5]" value="5"> -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-1" value="1">
                                 <label for="multi-intensity-1player[5]-1" class="switch switch --on">1</label>
@@ -527,19 +436,11 @@
                             </p>
                         </td>
                         <td>
-                            <!-- Distance to MRT
-                <input type="radio" value="1" name="crit2[5]" checked>vs Distance to School
-                <input type="radio" value="2" name="crit2[5]"> -->
+
                             <input type="radio" value="1" name="multi-crit-2player[5]" id="multi-crit-2player[5]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-2player[5]-1" class="switch switch --on">Distance to MRT</label>
                             <input type="radio" value="2" name="multi-crit-2player[5]" id="multi-crit-2player[5]-2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[5]-2" class="switch switch --off">Distance to School</label>
-                            <!-- <br/>1
-                <input type="radio" name="intensity2[5]" value="1">2
-                <input type="radio" name="intensity2[5]" value="2">3
-                <input type="radio" name="intensity2[5]" value="3" checked>4
-                <input type="radio" name="intensity2[5]" value="4">5
-                <input type="radio" name="intensity2[5]" value="5"> -->
                             <p>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-1" value="1">
                                 <label for="multi-intensity-2player[5]-1" class="switch switch --on">1</label>
@@ -557,6 +458,12 @@
             </table>
             <button type="button" onclick="runAHP(2);">Run AHP</button>
         </div>
+
+        <div id="ahp-output" style="display:none;">
+
+        </div>
+        <!--close button-->
+        <a class="close-reveal-modal">&#215;</a>
     </div>
 </body>
 
