Kenneth is awesome
Reset Form to default values.

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <label for="crit[1]-2" class="switch switch --off">Distance to MRT</label>
 
                     <p>
-                        <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-1" value="1">
+                        <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-1" value="1" checked="checked">
                         <label for="intensity[1]-1" class="switch switch --on">1</label>
-                        <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-2" value="2" checked="checked">
+                        <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-2" value="2">
                         <label for="intensity[1]-2" class="switch switch --on">2</label>
                         <input type="radio" hidden autocomplete="off" name="intensity[1]" id="intensity[1]-3" value="3">
                         <label for="intensity[1]-3" class="switch switch --on">3</label>
@@ -213,7 +213,7 @@
                             <label for="multi-crit-1player[0]-2" class="switch switch --off">Floor Area</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-1" value="1" checked="checked">
                                 <label for="multi-intensity-1player[0]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-2" value="2">
                                 <label for="multi-intensity-1player[0]-2" class="switch switch --on">2</label>
@@ -221,7 +221,7 @@
                                 <label for="multi-intensity-1player[0]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-4" value="4">
                                 <label for="multi-intensity-1player[0]-4" class="switch switch --on">4</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-5" value="5" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[0]" id="multi-intensity-1player[0]-5" value="5">
                                 <label for="multi-intensity-1player[0]-5" class="switch switch --on">5</label>
                             </p>
                         </td>
@@ -233,7 +233,7 @@
                             <label for="multi-crit-2player[0]-2" class="switch switch --off">Floor Area</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-1" value="1" checked="checked">
                                 <label for="multi-intensity-2player[0]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-2" value="2">
                                 <label for="multi-intensity-2player[0]-2" class="switch switch --on">2</label>
@@ -241,7 +241,7 @@
                                 <label for="multi-intensity-2player[0]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-4" value="4">
                                 <label for="multi-intensity-2player[0]-4" class="switch switch --on">4</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-5" value="5" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[0]" id="multi-intensity-2player[0]-5" value="5" >
                                 <label for="multi-intensity-2player[0]-5" class="switch switch --on">5</label>
                             </p>
                         </td>
@@ -254,7 +254,7 @@
                             <label for="multi-crit-1player[1]-2" class="switch switch --off">Distance to MRT</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-1" value="1" checked="checked">
                                 <label for="multi-intensity-1player[1]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-2" value="2">
                                 <label for="multi-intensity-1player[1]-2" class="switch switch --on">2</label>
@@ -262,7 +262,7 @@
                                 <label for="multi-intensity-1player[1]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-4" value="4">
                                 <label for="multi-intensity-1player[1]-4" class="switch switch --on">4</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-5" value="5" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[1]" id="multi-intensity-1player[1]-5" value="5">
                                 <label for="multi-intensity-1player[1]-5" class="switch switch --on">5</label>
                             </p>
 
@@ -274,7 +274,7 @@
                             <label for="multi-crit-2player[1]-2" class="switch switch --off">Distance to MRT</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-1" value="1" checked="checked">
                                 <label for="multi-intensity-2player[1]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-2" value="2">
                                 <label for="multi-intensity-2player[1]-2" class="switch switch --on">2</label>
@@ -282,7 +282,7 @@
                                 <label for="multi-intensity-2player[1]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-4" value="4">
                                 <label for="multi-intensity-2player[1]-4" class="switch switch --on">4</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-5" value="5" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[1]" id="multi-intensity-2player[1]-5" value="5">
                                 <label for="multi-intensity-2player[1]-5" class="switch switch --on">5</label>
                             </p>
                         </td>
@@ -334,19 +334,19 @@
                         <td>
 
 
-                            <input type="radio" value="1" name="multi-crit-1player[3]" id="multi-crit-1player[3]-1" hidden autocomplete="off">
+                            <input type="radio" value="1" name="multi-crit-1player[3]" id="multi-crit-1player[3]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-1player[3]-1" class="switch switch --on">Floor Area</label>
-                            <input type="radio" value="2" name="multi-crit-1player[3]" id="multi-crit-1player[3]-2" autocomplete="off" hidden checked="checked">
+                            <input type="radio" value="2" name="multi-crit-1player[3]" id="multi-crit-1player[3]-2" autocomplete="off" hidden>
                             <label for="multi-crit-1player[3]-2" class="switch switch --off">Distance to MRT</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-1" value="1" checked="checked">
                                 <label for="multi-intensity-1player[3]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-2" value="2">
                                 <label for="multi-intensity-1player[3]-2" class="switch switch --on">2</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-3" value="3">
                                 <label for="multi-intensity-1player[3]-3" class="switch switch --on">3</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-4" value="4" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-4" value="4">
                                 <label for="multi-intensity-1player[3]-4" class="switch switch --on">4</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[3]" id="multi-intensity-1player[3]-5" value="5">
                                 <label for="multi-intensity-1player[3]-5" class="switch switch --on">5</label>
@@ -355,18 +355,18 @@
                         </td>
                         <td>
 
-                            <input type="radio" value="1" name="multi-crit-2player[3]" id="multi-crit-2player[3]-1" hidden autocomplete="off">
+                            <input type="radio" value="1" name="multi-crit-2player[3]" id="multi-crit-2player[3]-1" hidden autocomplete="off" checked="checked">
                             <label for="multi-crit-2player[3]-1" class="switch switch --on">Floor Area</label>
-                            <input type="radio" value="2" name="multi-crit-2player[3]" id="multi-crit-2player[3]-2" autocomplete="off" hidden checked="checked">
+                            <input type="radio" value="2" name="multi-crit-2player[3]" id="multi-crit-2player[3]-2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[3]-2" class="switch switch --off">Distance to MRT</label>
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-1" value="1" checked="checked">
                                 <label for="multi-intensity-2player[3]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-2" value="2">
                                 <label for="multi-intensity-2player[3]-2" class="switch switch --on">2</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-3" value="3">
                                 <label for="multi-intensity-2player[3]-3" class="switch switch --on">3</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-4" value="4" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-4" value="4">
                                 <label for="multi-intensity-2player[3]-4" class="switch switch --on">4</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[3]" id="multi-intensity-2player[3]-5" value="5">
                                 <label for="multi-intensity-2player[3]-5" class="switch switch --on">5</label>
@@ -423,11 +423,11 @@
                             <label for="multi-crit-1player[5]-2" class="switch switch --off">Distance to School</label>
 
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-1" value="1" checked="checked">
                                 <label for="multi-intensity-1player[5]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-2" value="2">
                                 <label for="multi-intensity-1player[5]-2" class="switch switch --on">2</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-3" value="3" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-3" value="3">
                                 <label for="multi-intensity-1player[5]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-1player[5]" id="multi-intensity-1player[5]-4" value="4">
                                 <label for="multi-intensity-1player[5]-4" class="switch switch --on">4</label>
@@ -442,11 +442,11 @@
                             <input type="radio" value="2" name="multi-crit-2player[5]" id="multi-crit-2player[5]-2" autocomplete="off" hidden>
                             <label for="multi-crit-2player[5]-2" class="switch switch --off">Distance to School</label>
                             <p>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-1" value="1">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-1" value="1" checked="checked">
                                 <label for="multi-intensity-2player[5]-1" class="switch switch --on">1</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-2" value="2">
                                 <label for="multi-intensity-2player[5]-2" class="switch switch --on">2</label>
-                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-3" value="3" checked="checked">
+                                <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-3" value="3">
                                 <label for="multi-intensity-2player[5]-3" class="switch switch --on">3</label>
                                 <input type="radio" hidden autocomplete="off" name="multi-intensity-2player[5]" id="multi-intensity-2player[5]-4" value="4">
                                 <label for="multi-intensity-2player[5]-4" class="switch switch --on">4</label>
