Last minute max is awesom

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="map" class="leaflet-fade-anim" />
 
     <div id="myModal" class="reveal-modal">
-        <p class="mode-toggle" align="center">
+        <p class="mode-toggle" align="center" style="font-size:2.5em;">
             <input type="radio" id="mode-switch-single" name="mode-switch" value="1" autocomplete="off" checked="checked" hidden>
             <label for="mode-switch-single" class="switch switch --on">Go Solo</label>
             <input type="radio" id="mode-switch-dual" name="mode-switch" value="2" autocomplete="off" hidden>
@@ -190,7 +190,7 @@
                 </p>
 
 
-                <button type="button" onclick="runAHP(1);">Run AHP</button>
+                <center><button type="button" onclick="runAHP(1);">Run AHP</button></center>
             </form>
         </div>
 
@@ -456,7 +456,7 @@
                         </td>
                     </tr>
             </table>
-            <button type="button" onclick="runAHP(2);">Run AHP</button>
+            <center><button type="button" onclick="runAHP(2);">Run AHP</button></center>
         </div>
 
         <div id="ahp-output" style="display:none;">
