Added Clinics, Some cosmetic touch-ups, consistency ratio message updated

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
             <table>
                 <form class="flatform">
                     <thead>
-                        <td>
-                            player1
+                        <td class="titlecell">
+                            User 1
                         </td>
-                        <td>
-                            player2
+                        <td class="titlecell">
+                            User 2
                         </td>
                     </thead>
                     <tr>
